[package]
name = "brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.81"
memchr = "2.7.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
